; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/arcmsr/extr_arcmsr.c_arcmsr_hbd_message_isr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/arcmsr/extr_arcmsr.c_arcmsr_hbd_message_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.AdapterControlBlock = type { i32 }

@HBD_MessageUnit = common dso_local global i32 0, align 4
@outbound_doorbell = common dso_local global i32 0, align 4
@ARCMSR_HBDMU_IOP2DRV_MESSAGE_CMD_DONE_CLEAR = common dso_local global i32 0, align 4
@msgcode_rwbuffer = common dso_local global i32* null, align 8
@ARCMSR_SIGNATURE_GET_CONFIG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.AdapterControlBlock*)* @arcmsr_hbd_message_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arcmsr_hbd_message_isr(%struct.AdapterControlBlock* %0) #0 {
  %2 = alloca %struct.AdapterControlBlock*, align 8
  %3 = alloca i64, align 8
  store %struct.AdapterControlBlock* %0, %struct.AdapterControlBlock** %2, align 8
  %4 = load i32, i32* @HBD_MessageUnit, align 4
  %5 = load i32, i32* @outbound_doorbell, align 4
  %6 = load i32, i32* @ARCMSR_HBDMU_IOP2DRV_MESSAGE_CMD_DONE_CLEAR, align 4
  %7 = call i32 @CHIP_REG_WRITE32(i32 %4, i32 0, i32 %5, i32 %6)
  %8 = load i32, i32* @HBD_MessageUnit, align 4
  %9 = load i32*, i32** @msgcode_rwbuffer, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @CHIP_REG_READ32(i32 %8, i32 0, i32 %11)
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @ARCMSR_SIGNATURE_GET_CONFIG, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load %struct.AdapterControlBlock*, %struct.AdapterControlBlock** %2, align 8
  %18 = call i32 @arcmsr_dr_handle(%struct.AdapterControlBlock* %17)
  br label %19

19:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @CHIP_REG_WRITE32(i32, i32, i32, i32) #1

declare dso_local i64 @CHIP_REG_READ32(i32, i32, i32) #1

declare dso_local i32 @arcmsr_dr_handle(%struct.AdapterControlBlock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
